modified:   index.html 	modified:   jogodavelha.js

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body ng-app="jvApp" ng-controller="jvControl">
     <div class="primeira">    
         <div class="col-xl" >
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b1" ng-bind-html="b1b">{{jogador(showID)}}</button>
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b2" ng-bind-html="b2b">text</button>
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b3" ng-bind-html="b3b">{{player}}</button><br>
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b4" ng-bind-html="b4b">{{player}}</button>
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b5" ng-bind-html="b5b">{{player}}</button>
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b6" ng-bind-html="b6b">{{player}}</button><br>
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b7" ng-bind-html="b7b">{{player}}</button>
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b8" ng-bind-html="b8b">{{player}}</button>
-                    <button ng-click="showID($event);clicktest($event)" class="btn btn-primary" id="b9" ng-bind-html="b9b">{{player}}</button>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b1" ng-bind-html="b1b"></button>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b2" ng-bind-html="b2b"></button>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b3" ng-bind-html="b3b"></button><br>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b4" ng-bind-html="b4b"></button>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b5" ng-bind-html="b5b"></button>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b6" ng-bind-html="b6b"></button><br>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b7" ng-bind-html="b7b"></button>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b8" ng-bind-html="b8b"></button>
+                    <button ng-click="showID($event)" ng-mouseleave="clicktest($event)" class="btn btn-primary" id="b9" ng-bind-html="b9b"></button>
                     
          </div>
     </div>
